cabal-version:       3.0
name:                nothing-special
version:             0.0.0.1
synopsis:            Yet another typechecker for simple dependently typed language
license:             GPL-3.0-only
author:              Nezk
category:            Language
build-type:          Simple

common common-options
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-missing-signatures
  
executable ns
  import:              common-options
  hs-source-dirs:      src
  main-is:             Main.hs
  
  other-modules:       Syntax
                       Utils
                       Eval
                       Readback
                       Pretty
                       Typechecker
                       Wellscoped
                       Parser

  build-depends:       base       >= 4.21,
                       containers >= 0.6,
                       mtl        >= 2.3,
                       parsec     >= 3.1
